--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,11 @@
+:root {
+  font-synthesis: none;
+  font-kerning: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 * {
     margin: 0;
     padding: 0;
